httpd: add convert HTTP backend for jscalendar testing
Signed-off-by: Robert Stepanek <rsto@fastmailteam.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1348,6 +1348,7 @@ BUILT_SOURCES += \
 imap_httpd_SOURCES += \
 	imap/defaultalarms.c \
 	imap/defaultalarms.h \
+	imap/http_convert.c \
 	imap/http_jmap.c \
 	imap/http_jmap.h \
 	imap/jmap_admin.c \
